GNOME Bugzilla – Bug 742705
Incorrect height parameter receiving from pixbuf in gutter_renderer_pixbuf_draw()
Last modified: 2015-01-11 21:17:16 UTC
Created attachment 294221 [details] [review] Patch gtksourcegutterrendererpixbuf.c 118 width = gdk_pixbuf_get_width (pixbuf); height = gdk_pixbuf_get_width (pixbuf); I think should be: height = gdk_pixbuf_get_height (pixbuf); Patch attached.
Review of attachment 294221 [details] [review]: Looks good
Commit pushed, thanks.