Fix height parameter calculation in gutter_renderer_pixbuf_draw()

Signed-off-by: Maks Naumov <maksqwe1@ukr.net>

https://bugzilla.gnome.org/show_bug.cgi?id=742705